--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
+    "voyageai": "^0.1.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
