--- a/package.json
+++ b/package.json
@@ -41,6 +41,13 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tiptap/core": "^3.18.0",
+    "@tiptap/extension-document": "^3.18.0",
+    "@tiptap/extension-paragraph": "^3.18.0",
+    "@tiptap/extension-text": "^3.18.0",
+    "@tiptap/pm": "^3.18.0",
+    "@tiptap/react": "^3.18.0",
+    "@tiptap/starter-kit": "^3.18.0",
     "@upstash/vector": "^1.2.2",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
