--- a/package.json
+++ b/package.json
@@ -42,13 +42,35 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tiptap/core": "^3.18.0",
-    "@tiptap/extension-document": "^3.18.0",
-    "@tiptap/extension-paragraph": "^3.18.0",
-    "@tiptap/extension-text": "^3.18.0",
-    "@tiptap/pm": "^3.18.0",
-    "@tiptap/react": "^3.18.0",
-    "@tiptap/starter-kit": "^3.18.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/core": "3.19.0",
+    "@tiptap/extension-blockquote": "^3.19.0",
+    "@tiptap/extension-bold": "^3.19.0",
+    "@tiptap/extension-bullet-list": "^3.19.0",
+    "@tiptap/extension-code": "^3.19.0",
+    "@tiptap/extension-code-block": "^3.19.0",
+    "@tiptap/extension-document": "^3.19.0",
+    "@tiptap/extension-dropcursor": "^3.19.0",
+    "@tiptap/extension-gapcursor": "^3.19.0",
+    "@tiptap/extension-hard-break": "^3.19.0",
+    "@tiptap/extension-heading": "^3.19.0",
+    "@tiptap/extension-highlight": "^3.19.0",
+    "@tiptap/extension-history": "^3.19.0",
+    "@tiptap/extension-horizontal-rule": "^3.19.0",
+    "@tiptap/extension-image": "^3.19.0",
+    "@tiptap/extension-italic": "^3.19.0",
+    "@tiptap/extension-link": "^3.19.0",
+    "@tiptap/extension-list-item": "^3.19.0",
+    "@tiptap/extension-ordered-list": "^3.19.0",
+    "@tiptap/extension-paragraph": "^3.19.0",
+    "@tiptap/extension-placeholder": "^3.19.0",
+    "@tiptap/extension-strike": "^3.19.0",
+    "@tiptap/extension-task-item": "^3.19.0",
+    "@tiptap/extension-task-list": "^3.19.0",
+    "@tiptap/extension-text": "^3.19.0",
+    "@tiptap/extension-typography": "^3.19.0",
+    "@tiptap/pm": "^3.19.0",
+    "@tiptap/react": "^3.19.0",
     "@upstash/vector": "^1.2.2",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
@@ -70,6 +92,7 @@
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tiptap-markdown": "^0.9.0",
     "vaul": "^1.1.2",
     "voyageai": "^0.1.0",
     "zod": "^4.3.6"
