--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tiptap/extension-italic": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
     "@tiptap/extension-list-item": "^3.19.0",
+    "@tiptap/extension-mention": "^3.19.0",
     "@tiptap/extension-ordered-list": "^3.19.0",
     "@tiptap/extension-paragraph": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
@@ -71,6 +72,7 @@
     "@tiptap/extension-typography": "^3.19.0",
     "@tiptap/pm": "^3.19.0",
     "@tiptap/react": "^3.19.0",
+    "@tiptap/suggestion": "^3.19.0",
     "@upstash/vector": "^1.2.2",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
@@ -92,6 +94,7 @@
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tippy.js": "^6.3.7",
     "tiptap-markdown": "^0.9.0",
     "vaul": "^1.1.2",
     "voyageai": "^0.1.0",
