--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bunx tsx db/seed/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
